@@ -146,7 +146,7 @@ SEXP do_chartr(SEXP, SEXP, SEXP, SEXP);
 SEXP do_class(SEXP, SEXP, SEXP, SEXP);
 SEXP do_classgets(SEXP, SEXP, SEXP, SEXP);
 SEXP do_clip(SEXP, SEXP, SEXP, SEXP);
-SEXP do_colon(SEXP, SEXP, SEXP, SEXP);
+SEXP do_colon(SEXP, SEXP, SEXP, SEXP, int);
 SEXP do_colors(SEXP, SEXP, SEXP, SEXP);
 SEXP do_colsum(SEXP, SEXP, SEXP, SEXP);
 SEXP do_col2RGB(SEXP, SEXP, SEXP, SEXP);
@@ -443,9 +443,9 @@ SEXP do_savehistory(SEXP, SEXP, SEXP, SEXP);
 SEXP do_scan(SEXP, SEXP, SEXP, SEXP);
 SEXP do_search(SEXP, SEXP, SEXP, SEXP);
 SEXP do_segments(SEXP, SEXP, SEXP, SEXP);
-SEXP do_seq(SEXP, SEXP, SEXP, SEXP);
-SEXP do_seq_along(SEXP, SEXP, SEXP, SEXP);
-SEXP do_seq_len(SEXP, SEXP, SEXP, SEXP);
+SEXP do_seq(SEXP, SEXP, SEXP, SEXP, int);
+SEXP do_seq_along(SEXP, SEXP, SEXP, SEXP, int);
+SEXP do_seq_len(SEXP, SEXP, SEXP, SEXP, int);
 SEXP do_serializeToConn(SEXP, SEXP, SEXP, SEXP);
 SEXP do_set(SEXP, SEXP, SEXP, SEXP);
 SEXP do_setencoding(SEXP, SEXP, SEXP, SEXP);
